Fixed add issue

--- a/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
@@ -128,12 +128,12 @@
                     <div class="mb-3">
                       <label for="exampleFormControlInput1" class="form-label"
                         >Title</label>
-                      <input
+                      <!-- <input
                         type="title"
                         class="form-control"
                         id="exampleFormControlInput1"
                         placeholder="Title"
-                      />
+                      /> -->
                       <div
                       type="title"
                       id="exampleFormControlInput1"
@@ -163,12 +163,12 @@
                     </div>
                     <div class="mb-3">
                     <label for="sel1">Category</label>
-                    <select class="form-control" id="sel1">
+                    <!-- <select class="form-control" id="sel1">
                       <option>Politics</option>
                       <option>Sports</option>
                       <option>Business</option>
                       <option>Entertainment</option>
-                    </select>
+                    </select> -->
                     {{form.category}}
                   </div>
                     <div class="mb-3">
@@ -177,11 +177,11 @@
                         class="form-label"
                         >Body</label
                       >
-                      <textarea
+                      <!-- <textarea
                         class="form-control"
                         id="exampleFormControlTextarea1"
                         rows="3"
-                      ></textarea>
+                      ></textarea> -->
                       <div
                       id="exampleFormControlTextarea1"
                       
