--- a/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
@@ -136,9 +136,9 @@
                     <tbody>
                       <tr>
                         {% for items in all %}
-                        <td> {{taxable_income.as_p}}</td>
-                        <td>{{ items.annual_gross_salary}}</td>
-                        <td>{{ items.tax_slab_percentages }}</td>
+                        <td>{{ items.annual_gross_salary }}</td>
+                        <td>{{ items.tax_slab_percentage }}</td>
+                        <td> {{ items.taxable_income}}</td>
                         <td>{{ items.net_payable_tax }}</td>
                       </tr>
                         {% endfor %}
