Normal Bug Fix.

--- a/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
@@ -117,8 +117,8 @@
             </nav>
           </div>
         <div class="container">
-            <img src="{% static 'images/teenage-boy.jpg' %}" class="photo mt-5">
-            <h5 class="text-center mt-4">David Dhawan</h5>
+            {% comment %} <img src="{% static 'images/teenage-boy.jpg' %}" class="photo mt-5">
+            <h5 class="text-center mt-4">David Dhawan</h5> {% endcomment %}
             <div>
                 <h4 class="mt-4">Tax History</h4>
                 <hr class="bg-success mb-1 mt-0 d-inline-block" style="width: 125px; height: 2px;">
