--- a/Backend/login/loginapp/templates/loginapp/Html file/taxCalculator.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/taxCalculator.html
@@ -144,25 +144,25 @@
                             <label class="inputtext" for="inputname">Monthly Salary</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="monthly_salary" name="monthly_salary">
+                            <input type="number" class="form-control" id="monthly_salary" name="monthly_salary" min=0>
                         </div>
                         <div class="col-md-6 mb-4">
                             <label class="inputtext" for="inputname">No. of months</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="no_months" name="no_months">
+                            <input type="number" class="form-control" id="no_months" name="no_months" min=0>
                         </div>
                         <div class="col-md-6 mb-4">
                             <label class="inputtext" for="inputname">Bonus</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="bonus" name="bonus">
+                            <input type="number" class="form-control" id="bonus" name="bonus" min=0>
                         </div>
                         <div class="col-md-6 mb-4">
                             <label class="inputtext" for="inputname">Allowance</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="allowance" name="allowance">
+                            <input type="number" class="form-control" id="allowance" name="allowance" min=0>
                         </div>
                         {% comment %}
                         <!-- <hr class="mb-3" style="background-color: blue; border: 1px solid blue; width: 90%;">
@@ -182,19 +182,19 @@
                             <label class="inputtext" for="inputname">Employee Provident Fund</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="emp_provident" name="emp_provident">
+                            <input type="number" class="form-control" id="emp_provident" name="emp_provident" min=0>
                         </div>
                         <div class="col-md-6 mb-4">
                             <label class="inputtext" for="inputname">Citizen Investment Trust</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="CIT" name="CIT">
+                            <input type="number" class="form-control" id="CIT" name="CIT" min=0>
                         </div>
                         <div class="col-md-6 mb-4">
                             <label class="inputtext" for="inputname">Insurance</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="insurance" name="insurance">
+                            <input type="number" class="form-control" id="insurance" name="insurance" min=0>
                         </div>
                     </div>
                 </div>
